1998-11-08 Robert Bossecker <Robert.Bossecker@fresenius.de>

	* Fixed problem with editing EXT info, where if you edited track
	  x, it would (stupidly) modify x-1. If editing track 1, it would
	  modify the extinfo for the Title.

1998-11-06 Sam Maloney <thufir@illogic.ml.org>

	* Made smtpMailer a global widget, so it could mail in background. 
	* Fixed problem were after submitting a record via SMTP, and
	  having an error, if one tried to exit Kscd, it would close all
	  widgets, but be stuck in while loop.
	* Added error/success reporting of SMTP submissions.
	* Fixed problem with Local Cache, where it would ignore leading
	  0's in record file names, thus not finding them when looking for 
	  that record.
	* Added a timeout when waiting for server interaction.

1998-11-04  Sam Maloney  <thufir@illogic.ml.org>

	* Fixed problem with 'dock' button, when AutoDock is turned on.
	* Implimented SMTP code, so Kscd no longer requires sendmail/unix
	  mail program(s) to submit CDDB records.
	* Added VERY requested feature, of having it retract the tray if
	  its ejected, when one hits the eject button.

1998-10-14 Alexei Dets   <dets@services.ru>

       * Fixed CD Database Editor close handling.

1998-10-13  Sam Maloney  <thufir@illogic.ml.org>

	* Fixed compilation problems some compilers will notice related to
 	last CDDB setup modifs
	
1998-10-09  Sam Maloney  <thufir@illogic.ml.org>

	* Added "play on tray close" feature
	* Many little fixes
	
1998-09-23  Sam Maloney  <thufir@illogic.ml.org>
	
	* Fixed submission of CDDB records, where it would not include a
	  'PLAYORDER=' at the bottom of the email.
	* Switched it over from using 'mail -s <subject> < record', to
	  using sendmail. (currently adding SMTP suppport, so it uses
	  no external program for this)

1998-09-21  Sam Maloney  <thufir@illogic.ml.org>
	
	* Added automatic storing of CDDB records downloaded from CDDB
	  server to local harddrive.